--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <p>Paragraaf 3:</p>
     <p>Paragraaf 4:</p>
 
+    <div id="p"></div>
     <script defer src="script.js"></script>
   </body>
 </html>
